<resources>
    <string name="app_name">Post It</string>
    <string name="write">What do you want to Talk about?</string>
    <string name="post">post</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out_title">Confirmation</string>
    <string name="sign_out_message">Do you wish to sign out?</string>
    <string name="sign_out_accept">Sign Out</string>
    <string name="sign_out_decline">Cancel</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
</resources>