<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AD1F3"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/username"
        android:background="@drawable/edittext_shape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/email"
        android:background="@drawable/edittext_shape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_sign_up"
        android:background="@drawable/edittext_shape"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_Confirm"
        android:background="@drawable/edittext_shape"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintTop_toBottomOf="@id/password_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintTop_toBottomOf="@id/password_Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>